--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -2,10 +2,13 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+/* Nav Aria */
+
 nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0 200px;
 }
 
 .nav-title {
@@ -41,4 +44,20 @@ nav a {
     border: 0;
     border-radius: 5px;
     padding: 18px 35px;
+}
+
+/* Header Option */
+
+.header {
+    background-color: #FFF8F3;
+}
+
+.banner {
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+
+.profile-pic {
+    width: 500px;
 }
