--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -50,14 +50,48 @@ nav a {
 
 .header {
     background-color: #FFF8F3;
+    background-image: url(../images/header_bg.png);
+    background-repeat: no-repeat;
+    background-position: bottom right;
+    background-size: 700px;
 }
 
 .banner {
-    padding: 30px 30px 30px 150px;
+    padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+}
+
+.banner-content {
+    max-width: 500px;
 }
 
 .profile-pic {
     width: 500px;
+}
+
+.banner-greeting {
+    font-size: 45px;
+    color: #474747;
+    margin-bottom: 0;
+}
+
+.banner-title {
+    font-size: 85px;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+
+/* Main Section */
+
+/* About Section */
+
+.about {
+    margin-top: 100px;
+    padding: 130px;
+    border-radius: 10px;
+    background-color: #FFF8F3;
+    text-align: center;
 }
