--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -86,6 +86,11 @@ nav a {
 
 /* Main Section */
 
+main {
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
 /* About Section */
 
 .about {
@@ -94,4 +99,10 @@ nav a {
     border-radius: 10px;
     background-color: #FFF8F3;
     text-align: center;
+}
+
+.about-info-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
