--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -106,3 +106,13 @@ main {
     align-items: center;
     justify-content: space-between;
 }
+
+/* What I Do Section */
+
+.what-i-do {
+    text-align: center;
+}
+
+#what-i-do-dis {
+    padding: 30px 150px;
+}
