--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -141,3 +141,36 @@ main section {
 .review-resume {
     text-align: center;
 }
+
+.resume-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 100px;
+    text-align: left;
+}
+
+.resume-container hr {
+    margin: 30px 0;
+}
+
+.resume-item-title {
+    color: #474747;
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.resume-item-institute {
+    margin-bottom: 20px;
+    margin-top: 0;
+}
+
+.resume-item-institute,
+.resume-item-dis {
+    color: #757575;
+}
+
+.review-resume button {
+    margin-top: 50px;
+}
