--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -174,3 +174,35 @@ main section {
 .review-resume button {
     margin-top: 50px;
 }
+
+/* Footer Styles */
+
+footer {
+    display: flex;
+    gap: 100px;
+    background-color: #FFF8F3;
+    margin-top: 120px;
+    padding: 130px 230px;
+}
+
+.footer-column {
+    width: 50%;
+}
+
+.social-links a {
+    margin-right: 25px;
+    align-items: center;
+}
+
+.contact input[type="text"],
+input[type="email"],
+textarea {
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px 35px;
+    border: 0;
+    border-radius: 5px;
+    color: #757575;
+    background-color: white;
+    width: 100%;
+}
